@@ -28,6 +28,8 @@ WPROGRAM = $(RUBYW_INSTALL_NAME)$(EXEEXT)
 SOLIBS := $(DLL_BASE_NAME).res.@OBJEXT@ $(SOLIBS)
 EXTOBJS += $(@:$(EXEEXT)=.res.@OBJEXT@)
 
+rubyw: $(WPROGRAM)
+
 $(LIBRUBY): $(RUBY_EXP) $(LIBRUBY_SO)
 $(RUBY_EXP) $(LIBRUBY_SO): $(DLL_BASE_NAME).res.@OBJEXT@
 
